# SAS-Vaults

./: .credentials.template  .gitignore  .gitmodules  ALLOCATION_BUILD_SUMMARY.md  ALLOCATION_DEPLOYMENT_GUIDE.md  Anchor.toml  B4ZR8RhGjmooJ8CmiU2pwSuZUkhLPr7GdspAUVUj7fZi.json  BLANK_PAGE_FIXED.md  BUILD_STATUS.md  CLEANUP_GUIDE.md  CONSOLIDATION_COMPLETE.md  COST_REALITY_CHECK.md  CRITICAL_FIX_REQUIRED.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_KICKOFF_TOMORROW.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_WALLET_GUIDE.md  DEPLOY_MINIMAL_NOW.md  DEPLOY_NOW.md  DEPLOY_TO_MAINNET.md  DEPLOY_VIA_DASHBOARD.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile  EMERGENCY_FUNCTIONS.rs  Enhanced User Dashboard Front End.txt  FEATURE_COMPARISON.md  FIND_ARTIFACTS_GUIDE.md  FIXES_APPLIED.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  HYBRID_DEPLOY_GUIDE.md  INTEGRATION.md  JUPITER_IMPLEMENTATION_PLAN.md  (+71 more)
.github/workflows/: build-solana.yml  deploy-frontend.yml  deploy-netlify.yml  deploy-pages.yml  deploy-program.yml  vercel-deploy.yml
.implementation/: MAINNET_ROADMAP.md  jupiter-integration-complete.md  jupiter-integration-plan.md
SAS-Vaults (1)/: Anchor.toml
docs/: ARCHITECTURE.md  CREDENTIALS_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  FRONTEND_GUIDE.md  INDEX.md  JUPITER_INTEGRATION_GUIDE.md  NAVIGATION_UPDATE.md  PLATFORM_FEATURES.md  PLATFORM_FEE_GUIDE.md
docs/archive/: DEPLOY_VIA_SOLANA_PLAYGROUND.md  DOCUMENT_AUDIT_REPORT.md  FRONTEND_DEPLOYMENT.md  PRE_COMMIT_CHECKLIST.md  PRE_DEPLOYMENT_CHECKLIST.md  READY_TO_COMMIT.md  READY_TO_DEPLOY.md  REDEPLOYMENT_GUIDE.md  SECURITY_WARNING_FIX.md  SMART_CONTRACT_DOCUMENTATION.md  STATUS_SUMMARY.md  VAULT_CREATION_TROUBLESHOOTING.md  VERCEL_DASHBOARD_FIX.md  VERCEL_DEMO_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  VSCODE_EXTENSIONS.md
docs/backup_20260204_101051/: AUTO_DEPLOY_SUMMARY.md  BUILD_COMPLETE.md  BUILD_STATUS.md  BUILD_STEP_COMPLETE.md  CLEANUP_PHASE1_COMPLETE.md  CRITICAL_IDL_MISMATCH.md  CURRENT_DEPLOYMENT_STATUS.md  CURRENT_STATUS_UPDATE.md  DAPP_FLOW_FIXES.md  DEPLOYMENT.md  FINAL_SUCCESS.md  (+30 more)
frontend/: .env.example  .gitignore  COMPONENTS_README.md  DEPLOY.md  SAFETY_COMPONENTS.tsx  index.html  package-lock.json  package.json  vercel.json  vite.config.js
idl/: auto_savings.json
marketing-assets/: README.md
programs/auto-savings/: Cargo.toml  output.txt  output_sbf.txt
programs/auto-savings/src/: jupiter.rs  lib.rs  lib.rs.backup  lib.rs.safety-backup  lib_minimal.rs
scripts/: check-treasury-init.js  check-treasury-status.js  deploy.sh  health-check.js  init-treasury-direct.js  init-treasury-final.js  init-treasury-multi-rpc.js  init-treasury-simple.js  initialize-mainnet-treasury.js  initialize-treasury.js  manage-treasury.js  monitor-mainnet.js  package-lock.json  package.json  setup-treasury-authority.js  smoke_test.js  test-deployment.js  update_program_id.ps1  verify-treasury-setup.js
sdk/: client.ts  useAutoSavings.tsx
tests/: allocation.ts  auto-savings.ts
(+51 files in other folders)
