[package]
name = "auto-savings"
version = "0.1.0"
description = "Solana Auto-Savings Protocol - Automatically save a percentage of every transfer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auto_savings"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
getrandom = "=0.2.15"

# ============================================================================
# DEPLOYMENT OPTIMIZATION - Reduces program size by 20-40%
# ============================================================================
# Note: These settings prioritize small binary size over compile speed
# Build will take 2-3x longer but deployment will be cheaper
